WIP - Adding frontend module; working on dockerfile for ejb-module
Signed-off-by: VandeJr <vanderlei.jordao.jr@outlook.com>